--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "type": "magento2-module",
   "version": "1.0.0",
   "minimum-stability": "dev",
+  "prefer-stable": true,
   "authors": [
         {
             "name": "Koushik CH",
