--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,40 @@
 {
   "name": "chk/voicesearch",
-  "description": "Module for searching by voice",
-  "type": "magento2-module",
-  "authors": [
-        {
-            "name": "Koushik CH",
-            "email": "contact@chkosuhik.com",
-            "homepage": "https://chkoushik.com",
-	    "role": "Software Developer"
-        }
+  "description": "Magento 2 Module for searching by voice",
+  "require": {
+    "php": "^7.0|^7.1|^7.2|^7.3",
+    "magento/framework": "~100.1|~101.0",
+    "magento/module-catalog-url-rewrite": "100.1|~100.2",
+    "magento/module-url-rewrite": "~101.0|~100.1",
+    "symfony/console": "~2.3, !=2.7.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~6.2.0",
+    "codeclimate/php-test-reporter": "0.4.0",
+    "magento/marketplace-eqp": "^1.0.5"
+  },
+  "repositories": [
+    { "type": "composer", "url": "https://repo.magento.com/" }
   ],
-  "license": "GPL-3.0-or-later",
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "require": {},
+  "type": "magento2-module",
+  "license": [
+    "OSL-3.0",
+    "AFL-3.0"
+  ],
+  "authors": [
+    {
+      "name": "Koushik CH",
+	  "email": "contact@chkosuhik.com",
+	  "homepage": "https://chkoushik.com",
+	  "role": "Software Developer"
+    }
+  ],
   "autoload": {
-     "psr-4": {
-        "CHK\\VoiceSearch\\": ""
-     }
+    "files": [
+      "registration.php"
+    ],
+    "psr-4": {
+      "CHK\\VoiceSearch\\": ""
+    }
   }
 }
